fixed issues with background alignment when using the background class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,15 @@ body {
     overflow-y: hidden;
 }
 
+section {
+    min-height: 95vh;
+}
+
+p {
+    margin-bottom: 0;
+    padding: 8px 0;
+}
+
 
 /* Navigation ---------------------------------------------------- */
 
